packages/typ/tests/fixtures/diagnostics/0029_core_tuple_annotation_mismatch_03.ml
let gamma : int * bool = (true, 2)
